load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "bitcointax.go",
        "cointrackerio.go",
        "csv.go",
    ],
    importpath = "github.com/r0bertz/ripple-go/csv",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_r0bertz_ripple//data:go_default_library",
        "@com_github_r0bertz_ripple//websockets:go_default_library",
    ],
)
