load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["date.go"],
    importpath = "github.com/r0bertz/ripple/date",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["date_test.go"],
    embed = [":go_default_library"],
    importpath = "github.com/r0bertz/ripple/date",
)
