load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["csv.go"],
    importpath = "github.com/r0bertz/ripple-go/cmd/csv",
    visibility = ["//visibility:private"],
    deps = ["//csv:go_default_library"],
)

go_binary(
    name = "csv",
    embed = [":go_default_library"],
    importpath = "github.com/r0bertz/ripple-go/cmd/csv",
    visibility = ["//visibility:public"],
)
