load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["history.go"],
    importpath = "github.com/r0bertz/ripple/cmd/history",
    visibility = ["//visibility:private"],
    deps = [
        "//tx:go_default_library",
        "//wss:go_default_library",
        "@com_github_gorilla_websocket//:go_default_library",
    ],
)

go_binary(
    name = "history",
    embed = [":go_default_library"],
    importpath = "github.com/r0bertz/ripple/cmd/history",
    visibility = ["//visibility:public"],
)
